--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -5,6 +5,7 @@
         &-link
             font-size: 13px
     .promo
+        padding-top: 150px
         padding-bottom: 100px
         &-header
             font-size: 50px
